added the custom social media widgett to not be ignored by git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ plugins/*
 !plugins/csl-functionality/
 !plugins/CMB2/
 !plugins/cmb2-conditionals/
+!plugins/csl-social-media-widget/
 
 # Ignore everything in "themes" except the active theme. #
 # ====================================================== #
